# sentralert

./: .coderabbit.yaml  .env.example  .gitignore  README.md  pyproject.toml
alerts/: -api-orders-high-failure-rate.yaml  -checkout-high-failure-rate.yaml  checkout-endpoint-failure-rate-critically-high.yaml  checkout-failure-rate-critical---payment-token-errors.yaml  checkout-latency-spike---p95->-1-second.yaml  checkout-p95-latency-degradation.yaml  checkout-p95-latency-spike---external-api-delays.yaml  checkout-payment-processing-critical---unmonitored-endpoint.yaml  checkout-payment-processing-failure-rate-critical.yaml  critical:-checkout-endpoint-completely-unmonitored.yaml  critical:-external-api-timeout-protection.yaml  critical:-missing-payment-token-validation-errors.yaml  critical:-refund-endpoint-completely-unmonitored.yaml  external-paymentservice-timeout-monitoring.yaml  high-error-rate-in-production.yaml  high:-checkout-failure-rate-spike-detection.yaml  high:-checkout-p95-latency-degradation.yaml  high:-orders-endpoint-elevated-failure-rate.yaml  https:--*-favicon.ico-high-failure-rate.yaml  inventory-service-database-timeout-detection.yaml  inventory-service-timeout-monitoring.yaml  medium:-catalog-service-availability-monitoring.yaml  medium:-inventory-database-timeout-prevention.yaml  medium:-keyerror-in-payment-method-extraction.yaml  orders-endpoint-high-failure-rate-with-payment-errors.yaml  orders-endpoint-high-failure-rate.yaml  payment-service-timeout-alert---stripe-integration.yaml  payment-token-missing-errors---data-validation-alert.yaml  (+5 more)
(+14 files in other folders)
